--- a/src/styles/iosevka.css
+++ b/src/styles/iosevka.css
@@ -4,9 +4,12 @@
   font-weight: 400;
   font-stretch: normal;
   font-style: normal;
-  src: url('/iosevka/woff2/iosevka-slab-regular.woff2') format('woff2'),
-    url('/iosevka/woff/iosevka-slab-regular.woff') format('woff'),
-    url('/iosevka/ttf/iosevka-slab-regular.ttf') format('truetype');
+  src: url('https://chibicode.com/iosevka/woff2/iosevka-slab-regular.woff2')
+      format('woff2'),
+    url('https://chibicode.com/iosevka/woff/iosevka-slab-regular.woff')
+      format('woff'),
+    url('https://chibicode.com/iosevka/ttf/iosevka-slab-regular.ttf')
+      format('truetype');
 }
 
 @font-face {
@@ -15,7 +18,10 @@
   font-weight: 700;
   font-stretch: normal;
   font-style: normal;
-  src: url('/iosevka/woff2/iosevka-slab-bold.woff2') format('woff2'),
-    url('/iosevka/woff/iosevka-slab-bold.woff') format('woff'),
-    url('/iosevka/ttf/iosevka-slab-bold.ttf') format('truetype');
+  src: url('https://chibicode.com/iosevka/woff2/iosevka-slab-bold.woff2')
+      format('woff2'),
+    url('https://chibicode.com/iosevka/woff/iosevka-slab-bold.woff')
+      format('woff'),
+    url('https://chibicode.com/iosevka/ttf/iosevka-slab-bold.ttf')
+      format('truetype');
 }
